--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ input, button, textarea, select {
 
 .header {
   max-width: 1568px;
+  padding: 0 15px;
   padding-top: 40px;
   font-family: "Uindbase Font 1";
   font-weight: 400;
@@ -118,12 +119,102 @@ input, button, textarea, select {
   display: inline-block;
 }
 
+main .intro {
+  max-width: 1920px;
+  padding-top: 135px;
+}
+main .intro-title-wrapper {
+  height: 300px;
+  padding-top: 40px;
+  position: relative;
+}
+main .intro__bg-title {
+  position: absolute;
+  font-family: "Usually-font";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 170px;
+  line-height: 120px;
+  text-align: center;
+  text-transform: uppercase;
+  z-index: 1;
+  color: #1F252D;
+}
+main .intro__title {
+  position: absolute;
+  font-family: "Usually-font";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 130px;
+  line-height: 113px;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 5px 0px purple, -5px 0px 5px #D1C12B;
+  z-index: 2;
+  color: #FFFFFF;
+}
+main .intro__subtitle {
+  font-family: "Uindbase Font 1";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 25px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-shadow: 10px 24px 10px rgba(0, 0, 0, 0.27);
+}
+main .intro-social {
+  display: none;
+}
+main .intro-button-wrapper {
+  display: flex;
+  justify-content: end;
+  max-width: 1568px;
+  padding: 0 20px;
+}
+main .intro-button {
+  display: flex;
+  gap: 25px;
+  align-items: center;
+  align-self: start;
+  margin-top: 175px;
+  padding: 15px 40px;
+  border: none;
+  box-shadow: 0px 0px 0px 2px #D1C12B inset;
+  border-radius: 35px;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  -ms-border-radius: 35px;
+  -o-border-radius: 35px;
+  background: rgba(15, 21, 29, 0.2);
+  cursor: pointer;
+}
+main .intro-button__text {
+  font-family: "Uindbase Font 1";
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #D1C12B;
+}
+
 @media (max-width: 1600px) {
   .header {
     max-width: 1254px;
   }
   .header .header-subnav {
     padding-left: 180px;
+  }
+  main .intro {
+    max-width: 1600px;
+    padding-top: 115px;
+  }
+  main .intro__bg-title {
+    font-size: 110px;
+  }
+  main .intro__title {
+    font-size: 100px;
   }
 }
 @media (max-width: 1024px) {
@@ -149,6 +240,37 @@ input, button, textarea, select {
   }
   .header .header-subnav__menu {
     justify-content: center;
+  }
+  main .intro {
+    display: flex;
+    flex-direction: column;
+    max-width: 1024px;
+    padding-top: 90px;
+  }
+  main .intro-title-wrapper {
+    height: 200px;
+    padding-top: 40px;
+    position: relative;
+  }
+  main .intro__bg-title {
+    font-size: 80px;
+    line-height: 69.68px;
+  }
+  main .intro__title {
+    font-size: 65px;
+    line-height: 52.26px;
+  }
+  main .intro-social {
+    display: block;
+    padding-top: 35px;
+    padding-bottom: 45px;
+    margin: 0 auto;
+  }
+  main .intro-button-wrapper {
+    justify-content: center;
+  }
+  main .intro-button {
+    margin-top: 0;
   }
 }
 @media (max-width: 768px) {
@@ -176,5 +298,38 @@ input, button, textarea, select {
   }
   .header .header-subnav {
     display: none;
+  }
+  main .intro {
+    display: block;
+    max-width: 1024px;
+    padding-top: 90px;
+  }
+  main .intro-title-wrapper {
+    height: 160px;
+    padding-top: 0;
+    position: relative;
+  }
+  main .intro__bg-title {
+    font-size: 60px;
+    line-height: 52.26px;
+  }
+  main .intro__title {
+    font-size: 50px;
+    line-height: 40px;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+  }
+  main .intro-social {
+    display: none;
+  }
+  main .intro-button-wrapper {
+    justify-content: end;
+  }
+  main .intro-button {
+    margin-top: 230px;
   }
 }/*# sourceMappingURL=style.css.map */
