--- a/css/style.scss
+++ b/css/style.scss
@@ -38,9 +38,12 @@ $white: #FFFFFF;
     color: $yellow;
 }
 
+
+
 // STYLE
 .header {
     max-width: $limit-size1920;
+    padding: 0 15px;
     padding-top: 40px;
 
     font-family: 'Uindbase Font 1';
@@ -95,7 +98,105 @@ $white: #FFFFFF;
     }
 }
 
+main {
+    .intro {
+        max-width: 1920px;
+        padding-top: 135px;
+        &-title-wrapper {
+            height: 300px;
+            padding-top: 40px;
+            position: relative;
+        }
+        &__bg-title {
+            position: absolute;
 
+            font-family: 'Usually-font';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 170px;
+            line-height: 120px;
+            text-align: center;
+            text-transform: uppercase;
+
+            z-index: 1;
+
+            color:#1F252D;
+        }
+
+        &__title {
+            position: absolute;
+
+            font-family: 'Usually-font';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 130px;
+            line-height: 113px;
+            text-align: center;
+            text-transform: uppercase;
+            text-shadow: 5px 0px purple,
+                        -5px 0px 5px $yellow;
+
+            z-index: 2;
+
+            color: #FFFFFF;
+        }
+
+        &__subtitle {
+            font-family: 'Uindbase Font 1';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 25px;
+            line-height: 25px;
+
+            text-align: center;
+            text-transform: uppercase;
+
+            color: #FFFFFF;
+
+            text-shadow: 10px 24px 10px rgba(0, 0, 0, 0.27);
+        }
+        &-social {
+            display: none;
+        }
+        &-button-wrapper {
+            display: flex;
+            justify-content: end;
+
+            max-width: $limit-size1920;
+            padding: 0 20px;
+        }
+
+        &-button {
+            display: flex;
+            gap: 25px;
+            align-items: center;
+            align-self: start;
+
+            margin-top: 175px;
+            padding: 15px 40px;
+            border: none;
+            box-shadow:0px 0px 0px 2px $yellow inset;
+            border-radius: 35px;
+            -webkit-border-radius: 35px;
+            -moz-border-radius: 35px;
+            -ms-border-radius: 35px;
+            -o-border-radius: 35px;
+
+            background: rgba(15, 21, 29, 0.2);
+            cursor: pointer;
+        }
+        &-button__text {
+            font-family: 'Uindbase Font 1';
+            font-size: 20px;
+            line-height: 24px;
+            text-align: center;
+            text-transform: uppercase;
+            color: $yellow;
+        }
+    }
+
+    
+}
 
 @media (max-width: 1600px) {
     .header {
@@ -104,6 +205,20 @@ $white: #FFFFFF;
 
         .header-subnav {
             padding-left: 180px;
+        }
+    }
+
+    main {
+        .intro {
+            max-width: 1600px;
+            padding-top: 115px;
+            &__bg-title {
+                font-size: 110px;
+            }
+    
+            &__title {
+                font-size: 100px;
+            }
         }
     }
 }
@@ -130,6 +245,42 @@ $white: #FFFFFF;
             padding-left: 0;
             &__menu {
                 justify-content: center;
+            }
+        }
+    }
+
+    main {
+        .intro {
+            display: flex;
+            flex-direction: column;
+            max-width: 1024px;
+            padding-top: 90px;
+            &-title-wrapper {
+                height: 200px;
+                padding-top: 40px;
+                position: relative;
+            }
+            &__bg-title {
+                font-size: 80px;
+                line-height: 69.68px;
+            }
+    
+            &__title {
+                font-size: 65px;
+                line-height: 52.26px;
+            }
+            &-social {
+                display: block;
+
+                padding-top: 35px;
+                padding-bottom: 45px;
+                margin: 0 auto;
+            }
+            &-button-wrapper {
+                justify-content: center;
+            }
+            &-button {
+                margin-top: 0;
             }
         }
     }
@@ -163,6 +314,43 @@ $white: #FFFFFF;
         }
         .header-subnav {
             display: none;
+        }
+    }
+
+    main {
+        .intro {
+            display: block;
+            max-width: 1024px;
+            padding-top: 90px;
+            &-title-wrapper {
+                height: 160px;
+                padding-top: 0;
+                position: relative;
+            }
+            &__bg-title {
+                font-size: 60px;
+                line-height: 52.26px;
+            }
+    
+            &__title {
+                font-size: 50px;
+                line-height: 40px;
+                top: 50%;
+                transform: translateY(-50%);
+                -webkit-transform: translateY(-50%);
+                -moz-transform: translateY(-50%);
+                -ms-transform: translateY(-50%);
+                -o-transform: translateY(-50%);
+            }
+            &-social {
+                display: none;
+            }
+            &-button-wrapper {
+                justify-content: end;
+            }
+            &-button {
+                margin-top: 230px;
+            }
         }
     }
 }
