--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,6 @@ main .intro__bg-title {
   line-height: 120px;
   text-align: center;
   text-transform: uppercase;
-  z-index: 1;
   color: #1F252D;
 }
 main .intro__title {
@@ -150,7 +149,6 @@ main .intro__title {
   text-align: center;
   text-transform: uppercase;
   text-shadow: 5px 0px purple, -5px 0px 5px #D1C12B;
-  z-index: 2;
   color: #FFFFFF;
 }
 main .intro__subtitle {
@@ -197,6 +195,49 @@ main .intro-button__text {
   text-align: center;
   text-transform: uppercase;
   color: #D1C12B;
+}
+main .this-season {
+  max-width: 1568px;
+  padding-top: 280px;
+}
+main .this-season-title-wrapper {
+  height: 160px;
+  position: relative;
+}
+main .this-season__title-bg {
+  position: absolute;
+  font-family: "Usually-font";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 140px;
+  line-height: 160px;
+  text-transform: uppercase;
+  color: #1F252D;
+}
+main .this-season__title {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-family: "Uindbase Font 1";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 100px;
+  line-height: 100px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
+main .this-season .ts-slider {
+  width: 1248px;
+}
+main .this-season .ts-slider__slide {
+  height: 600px;
+}
+main .this-season .ts-slider #slide-1 {
+  background-image: url("../img/main-slider-slide.jpg");
 }
 
 @media (max-width: 1600px) {
