--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,36 @@ input, button, textarea, select {
   color: #D1C12B;
 }
 
+.button {
+  display: flex;
+  gap: 25px;
+  align-items: center;
+  padding: 15px 40px;
+  box-shadow: 0px 0px 0px 2px #D1C12B inset;
+  border-radius: 35px;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  -ms-border-radius: 35px;
+  -o-border-radius: 35px;
+  background: rgba(15, 21, 29, 0.2);
+  cursor: pointer;
+  border: none;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+.button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 10px #D1C12B;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
 .header {
   max-width: 1568px;
   padding: 0 15px;
@@ -172,21 +202,8 @@ main .intro-button-wrapper {
   padding: 0 20px;
 }
 main .intro-button {
-  display: flex;
-  gap: 25px;
-  align-items: center;
   align-self: start;
   margin-top: 175px;
-  padding: 15px 40px;
-  border: none;
-  box-shadow: 0px 0px 0px 2px #D1C12B inset;
-  border-radius: 35px;
-  -webkit-border-radius: 35px;
-  -moz-border-radius: 35px;
-  -ms-border-radius: 35px;
-  -o-border-radius: 35px;
-  background: rgba(15, 21, 29, 0.2);
-  cursor: pointer;
 }
 main .intro-button__text {
   font-family: "Uindbase Font 1";
@@ -231,13 +248,74 @@ main .this-season__title {
   -o-transform: translateY(-50%);
 }
 main .this-season .ts-slider {
-  width: 1248px;
+  max-width: 1248px;
 }
 main .this-season .ts-slider__slide {
   height: 600px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+main .this-season .ts-slider__slide-text-wrapper {
+  width: 300px;
+  padding-top: 100px;
+  margin-right: 100px;
+}
+main .this-season .ts-slider .slide__button {
+  margin-top: 15px;
 }
 main .this-season .ts-slider #slide-1 {
   background-image: url("../img/main-slider-slide.jpg");
+  display: flex;
+  justify-content: end;
+  font-family: "Uindbase Font 1";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 15px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+main .this-season .ts-slider #slide-2 {
+  background-image: url("../img/main-slider-slide.jpg");
+}
+main .this-season .ts-slider #slide-3 {
+  background-image: url("../img/main-slider-slide.jpg");
+}
+main .this-season .ts-slider #slide-4 {
+  background-image: url("../img/main-slider-slide.jpg");
+}
+main .this-season .ts-slider #slide-5 {
+  background-image: url("../img/main-slider-slide.jpg");
+}
+main .this-season .ts-slider-pagination {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding-top: 15px;
+}
+main .this-season .ts-slider-pag-bullet {
+  width: 160px;
+  height: 2px;
+  background-color: #FFFFFF;
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
+}
+main .this-season .ts-slider-pag-bullet--active {
+  width: 160px;
+  height: 2px;
+  background-color: #D1C12B;
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
 }
 
 @media (max-width: 1600px) {
@@ -256,6 +334,17 @@ main .this-season .ts-slider #slide-1 {
   }
   main .intro__title {
     font-size: 100px;
+  }
+  main .this-season {
+    max-width: 1254px;
+    padding-top: 64px;
+  }
+  main .this-season-title-wrapper {
+    height: 320px;
+  }
+  main .this-season__title {
+    padding-left: 10px;
+    width: 50%;
   }
 }
 @media (max-width: 1024px) {
@@ -312,6 +401,39 @@ main .this-season .ts-slider #slide-1 {
   }
   main .intro-button {
     margin-top: 0;
+  }
+  main .this-season {
+    max-width: 100%;
+    padding-top: 90px;
+  }
+  main .this-season-title-wrapper {
+    padding: 0 70px;
+    height: 280px;
+  }
+  main .this-season__title-bg {
+    font-size: 90px;
+  }
+  main .this-season__title {
+    font-size: 80px;
+    width: 90%;
+  }
+  main .this-season .ts-slider {
+    max-width: 100%;
+  }
+  main .this-season .ts-slider__slide {
+    height: 500px;
+  }
+  main .this-season .ts-slider__slide-text-wrapper {
+    display: none;
+  }
+  main .this-season .ts-slider-pagination {
+    padding-top: 35px;
+  }
+  main .this-season .ts-slider-pag-bullet {
+    width: 100px;
+  }
+  main .this-season .ts-slider-pag-bullet--active {
+    width: 100px;
   }
 }
 @media (max-width: 768px) {
@@ -372,5 +494,46 @@ main .this-season .ts-slider #slide-1 {
   }
   main .intro-button {
     margin-top: 230px;
+  }
+  main .this-season {
+    max-width: 100%;
+    padding-top: 215px;
+  }
+  main .this-season-title-wrapper {
+    padding: 0 15px;
+    height: 160px;
+  }
+  main .this-season__title-bg {
+    font-size: 60px;
+    line-height: 60px;
+  }
+  main .this-season__title {
+    top: 0;
+    line-height: 60px;
+    transform: translateY(0);
+    font-size: 60px;
+    width: 90%;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+  }
+  main .this-season .ts-slider {
+    max-width: 100%;
+  }
+  main .this-season .ts-slider__slide {
+    height: 400px;
+  }
+  main .this-season .ts-slider__slide-text-wrapper {
+    display: none;
+  }
+  main .this-season .ts-slider-pagination {
+    padding-top: 15px;
+  }
+  main .this-season .ts-slider-pag-bullet {
+    width: 50px;
+  }
+  main .this-season .ts-slider-pag-bullet--active {
+    width: 50px;
   }
 }/*# sourceMappingURL=style.css.map */
