--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,35 @@ $white: #FFFFFF;
     color: $yellow;
 }
 
+.button {
+    display: flex;
+    gap: 25px;
+    align-items: center;
+    padding: 15px 40px;
+    box-shadow:0px 0px 0px 2px $yellow inset;
+    border-radius: 35px;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    -ms-border-radius: 35px;
+    -o-border-radius: 35px;
+    background: rgba(15, 21, 29, 0.2);
+    cursor: pointer;
+    border: none;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+}
+.button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px $yellow;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
 
 
 // STYLE
@@ -164,23 +193,8 @@ main {
         }
 
         &-button {
-            display: flex;
-            gap: 25px;
-            align-items: center;
             align-self: start;
-
             margin-top: 175px;
-            padding: 15px 40px;
-            border: none;
-            box-shadow:0px 0px 0px 2px $yellow inset;
-            border-radius: 35px;
-            -webkit-border-radius: 35px;
-            -moz-border-radius: 35px;
-            -ms-border-radius: 35px;
-            -o-border-radius: 35px;
-
-            background: rgba(15, 21, 29, 0.2);
-            cursor: pointer;
         }
         &-button__text {
             font-family: 'Uindbase Font 1';
@@ -229,14 +243,78 @@ main {
             -o-transform: translateY(-50%);
         }
         .ts-slider {
-            width: 1248px;
+            max-width: 1248px;
+
             &__slide {
                 height: 600px;
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+            &__slide-text-wrapper {
+                width: 300px;
+                padding-top: 100px;
+                margin-right: 100px;
+            }
+            .slide__button {
+                margin-top: 15px;
             }
             #slide-1 {
                 background-image: url("../img/main-slider-slide.jpg");
+                display: flex;
+                justify-content: end;
+
+                font-family: 'Uindbase Font 1';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 15px;
+                line-height: 15px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                text-transform: uppercase;
+
+                color: #FFFFFF;
             }
-            
+            #slide-2 {
+                background-image: url("../img/main-slider-slide.jpg");
+            }
+            #slide-3 {
+                background-image: url("../img/main-slider-slide.jpg");
+            }
+            #slide-4 {
+                background-image: url("../img/main-slider-slide.jpg");
+            }
+            #slide-5 {
+                background-image: url("../img/main-slider-slide.jpg");
+            }
+            &-pagination {
+                display: flex;
+                justify-content: center;
+                gap: 30px;
+
+                padding-top: 15px;
+            }
+            &-pag-bullet {
+                width: 160px;
+                height: 2px;
+                background-color: #FFFFFF;
+                border-radius: 1px;
+                -webkit-border-radius: 1px;
+                -moz-border-radius: 1px;
+                -ms-border-radius: 1px;
+                -o-border-radius: 1px;
+            }
+            &-pag-bullet--active {
+                width: 160px;
+                height: 2px;
+                background-color: $yellow;
+                border-radius: 1px ;
+                -webkit-border-radius: 1px ;
+                -moz-border-radius: 1px ;
+                -ms-border-radius: 1px ;
+                -o-border-radius: 1px ;
+            }
         }
     }
 }
@@ -261,6 +339,18 @@ main {
     
             &__title {
                 font-size: 100px;
+            }
+        }
+
+        .this-season {
+            max-width: $limit-size1600;
+            padding-top: 64px;
+            &-title-wrapper {
+                height: 320px;
+            }
+            &__title {
+                padding-left: 10px;
+                width: 50%;
             }
         }
     }
@@ -324,6 +414,42 @@ main {
             }
             &-button {
                 margin-top: 0;
+            }
+        }
+
+        .this-season {
+            max-width: 100%;
+            padding-top: 90px;
+            &-title-wrapper {
+                padding: 0 70px;
+                height: 280px;
+            }
+            &__title-bg {
+                font-size: 90px;
+            }
+            &__title {
+                font-size: 80px;
+                width: 90%;
+            }
+
+            .ts-slider {
+                max-width: 100%;
+    
+                &__slide {
+                    height: 500px;
+                }
+                &__slide-text-wrapper {
+                    display: none;
+                }
+                &-pagination {    
+                    padding-top: 35px;
+                }
+                &-pag-bullet {
+                    width: 100px;
+                }
+                &-pag-bullet--active {
+                    width: 100px;
+                }
             }
         }
     }
@@ -393,6 +519,50 @@ main {
             }
             &-button {
                 margin-top: 230px;
+            }
+        }
+
+        .this-season {
+            max-width: 100%;
+            padding-top: 215px;
+            &-title-wrapper {
+                padding: 0 15px;
+                height: 160px;
+            }
+            &__title-bg {
+                font-size: 60px;
+                line-height: 60px;
+            }
+            &__title {
+                top: 0;
+                line-height: 60px;
+                transform: translateY(0);
+                font-size: 60px;
+                width: 90%;
+                -webkit-transform: translateY(0);
+                -moz-transform: translateY(0);
+                -ms-transform: translateY(0);
+                -o-transform: translateY(0);
+            }
+
+            .ts-slider {
+                max-width: 100%;
+    
+                &__slide {
+                    height: 400px;
+                }
+                &__slide-text-wrapper {
+                    display: none;
+                }
+                &-pagination {    
+                    padding-top: 15px;
+                }
+                &-pag-bullet {
+                    width: 50px;
+                }
+                &-pag-bullet--active {
+                    width: 50px;
+                }
             }
         }
     }
