--- a/css/style.scss
+++ b/css/style.scss
@@ -70,7 +70,7 @@ $white: #FFFFFF;
 
 .title-bg {
     position: absolute;
-    
+    width: 100%;
     font-family: 'Usually-font';
     font-style: normal;
     font-weight: 700;
@@ -86,6 +86,7 @@ $white: #FFFFFF;
     font-weight: 400;
     top: 50%;
     text-transform: uppercase;
+    text-shadow: 9px 9px 4px rgba(0, 0, 0, 0.25);
     color: #FFFFFF;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -165,6 +166,7 @@ main {
             height: 300px;
             padding-top: 40px;
             position: relative;
+            overflow: hidden;
         }
         &__bg-title {
             position: absolute;
@@ -241,7 +243,7 @@ main {
         padding-top: 280px;
         &__title-bg {
             position: absolute;
-
+            text-align: left;
             font-size: 140px;
             line-height: 160px;
         }
@@ -341,6 +343,7 @@ main {
         &__title-bg {
             font-size: 160px;
             line-height: 160px;
+            text-align: right;
         }
         &__title {
             font-size: 100px;
@@ -357,19 +360,84 @@ main {
 
         &__slider {
             max-width: 1248px;
+            // SLIDE
             .actual-card {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+                perspective: none;
 
-                max-width: 270px;
-                border-radius: 10px;
-                -webkit-border-radius: 10px;
-                -moz-border-radius: 10px;
-                -ms-border-radius: 10px;
-                -o-border-radius: 10px;
+                width: 270px;
+                height: 470px;
+                &-flip {
+                    position: relative;
+                    transform-style: preserve-3d;
 
-                background-color: #10171F;
+                    transition: 0.6s;
+                    -webkit-transition: 0.6s;
+                    -moz-transition: 0.6s;
+                    -ms-transition: 0.6s;
+                    -o-transition: 0.6s;
+                }
+                &-front,&-back {
+                    width: 270px;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    border-radius: 10px;
+                    -webkit-border-radius: 10px;
+                    -moz-border-radius: 10px;
+                    -ms-border-radius: 10px;
+                    -o-border-radius: 10px;
+                    
+                    backface-visibility: hidden;
+                    -webkit-backface-visibility: hidden;
+
+                    background-color: #10171F;
+                }
+                &-front {
+                    transform: rotateY(0);
+                    -webkit-transform: rotateY(0);
+                    -moz-transform: rotateY(0);
+                    -ms-transform: rotateY(0);
+                    -o-transform: rotateY(0);
+
+                    z-index: 2;
+                }
+                &-back {
+                    transform: rotateY(180deg);
+                    -webkit-transform: rotateY(180deg);
+                    -moz-transform: rotateY(180deg);
+                    -ms-transform: rotateY(180deg);
+                    -o-transform: rotateY(180deg);
+                }
+
+                // BACK 
+                &__bg {
+                    width: 270px;
+                    height: 380px;
+                    padding: 30px 15px 0 15px;
+
+                    border-top-left-radius: 10px;
+                    border-top-right-radius: 10px;
+
+                    background-image: url("../img/card-back.jpg");
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+                &__back-text {
+                    padding-top: 30px;
+                }
+                &-back-wrapper {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 90px;
+
+                    text-decoration: underline;
+                }
+
+                // FRONT
                 &__photo img {
                     width: 270px;
                     height: 380px;
@@ -391,12 +459,54 @@ main {
                 }
             }
         }
-        &__more {
-            max-width: 1248px;
-
+        &-more-wrapper {
+            text-align: center;
             padding: 60px 0px;
+            width: 100%;
+        }
+        &__more {
+            display: inline-block;
+            max-width: 1248px;
             text-align: center;
             text-decoration: underline;
+        }
+    }
+
+    .contact {
+        max-width: $limit-size1920;
+        &__title-bg {
+            font-size: 180px;
+            line-height: 180px;
+        }
+        &__title {
+            font-size: 100px;
+        }
+        &-content-wrapper {
+            padding: 20px 0px;
+            display: flex;
+        }
+        &__map img {
+            max-width: 1000px;
+            height: 550px;
+            object-fit: cover;
+        }
+        &__links {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 25px;
+
+            font-family: 'Uindbase Font 1';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 25px;
+            line-height: 25px;
+
+            text-transform: uppercase;
+
+            color: #FFFFFF;
+            flex-grow: 1;
         }
     }
 }
@@ -501,6 +611,28 @@ main {
                 display: block;
             }
         }
+        .contact {
+            max-width: $limit-size1600;
+            &__title-bg {
+                font-size: 130px;
+                line-height: 130px;
+            }
+            &__title {
+                font-size: 80px;
+                line-height: 80px;
+            }
+            &-content-wrapper {
+                padding: 20px 0px;
+            }
+            &__map img {
+                max-width: 835px;
+                height: 425px;
+            }
+            &__links {
+                font-size: 20px;
+                line-height: 20px;
+            }
+        }
     }
 }
 
@@ -569,15 +701,14 @@ main {
             max-width: 100%;
             padding-top: 90px;
             &-title-wrapper {
-                padding: 0 70px;
                 height: 280px;
             }
             &__title-bg {
-                font-size: 90px;
+                font-size: 100px;
             }
             &__title {
                 font-size: 80px;
-                width: 90%;
+                padding-left: 0px;
             }
 
             .ts-slider {
@@ -634,6 +765,33 @@ main {
                 display: none;
             }
             
+        }
+
+        .contact {
+            &__title-bg {
+                font-size: 70px;
+                line-height: 160px;
+            }
+            &__title {
+                font-size: 70px;
+                line-height: 70px;
+                padding-left: 20px;
+            }
+            &-content-wrapper {
+                flex-direction: column;
+                gap: 40px;
+            }
+            &__map img {
+                max-width: 100%;
+                width: 100%;
+            }
+            &__links {
+                font-size: 25px;
+                line-height: 30px;
+            }
+            &__social {
+                display: none;
+            }
         }
     }
 
@@ -705,12 +863,12 @@ main {
                 position: relative;
             }
             &__bg-title {
-                font-size: 60px;
+                font-size: 50px;
                 line-height: 52.26px;
             }
     
             &__title {
-                font-size: 50px;
+                font-size: 40px;
                 line-height: 40px;
                 top: 50%;
                 transform: translateY(-50%);
@@ -734,15 +892,16 @@ main {
             max-width: 100%;
             padding-top: 215px;
             &-title-wrapper {
-                padding: 0 15px;
                 height: 160px;
             }
             &__title-bg {
+                padding-left: 15px;
                 font-size: 60px;
                 line-height: 60px;
             }
             &__title {
                 top: 0;
+                padding-left: 15px;
                 line-height: 60px;
                 transform: translateY(0);
                 font-size: 60px;
@@ -777,8 +936,8 @@ main {
         .actual {
             padding-top: 0px;
     
-            font-size: 15px;
-            line-height: 15px;
+            font-size: 13px;
+            line-height: 13px;
             &-title-wrapper {
                 height: 160px;
             }
@@ -811,6 +970,15 @@ main {
                 .actual-card {
                     width: 180px;
                     height: 330px;
+                    &-front,&-back {
+                        width: 180px;
+                    }
+                    &__bg {
+                        width: 180px;
+                        height: 250px;
+                        padding: 20px 5px 0px 5px;
+                    }
+                    
                     &__photo img {
                         height: 250px;
                         width: 180px;
@@ -820,7 +988,20 @@ main {
             }
             
         }
-        
+
+        .contact {
+            &__title-bg {
+                display: none;
+            }
+            &__title {
+                font-size: 50px;
+                line-height: 50px;
+                padding-left: 5px;
+            }
+            &-content-wrapper {
+                padding: 20px 0px;
+            }
+        }
     }
 }
 
