--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ input, button, textarea, select {
   color: #FFFFFF;
 }
 
+.lock {
+  overflow: hidden;
+}
+
 .centered {
   margin: 0 auto;
 }
@@ -126,6 +130,47 @@ input, button, textarea, select {
 .title-wrapper {
   height: 160px;
   position: relative;
+}
+
+.burger-menu {
+  min-height: 100vh;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  text-align: center;
+  font-family: "Uindbase Font 1";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 40px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #0d141b;
+  z-index: 5;
+  overflow: auto;
+}
+.burger-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+  width: 100%;
+  min-height: 100vh;
+}
+.burger-menu__close {
+  width: 50px;
+  height: 50px;
+  padding: 10px 0px 0px 10px;
+  font-size: 30px;
+  color: #FFFFFF;
+  position: absolute;
+  right: 0;
+}
+.burger-menu__items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
@@ -812,12 +857,13 @@ main .contact__links {
   main .intro__title {
     font-size: 40px;
     line-height: 40px;
-    top: 50%;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
   }
   main .intro-social {
     display: none;
